--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <body>
     <h2>contacts list</h2>
     <h1>git commited </h1>
-    <h3>modify gre</h3>
+    <h3>modify grdadase</h3>
         <h3>abomodify gre</h3>
 </body>
 </html>
