--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>contacts list</h2>
-    <h1>git commited </h1>
+    <h1>git commidsadted </h1>
     <h3>modify grdadase</h3>
         <h3>abomodify gre</h3>
 </body>
