--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,6 @@
     <h2>contacts list</h2>
     <h1>git commited </h1>
     <h3>modify gre</h3>
-        <h3>abomodify gre</h3>
+        <h3>abomodify</h3>
 </body>
 </html>
